#Added Cacncellation order and refund functionality

--- a/Task1LoginRegister/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -99,6 +99,20 @@
                     </li>
                 </ul>
             </li>
+            <li class="nav-item has-dropdown">
+                <a class="nav-link" href="#">
+                    <i class="fas fa-fw fa-undo"></i>
+                    <span>Refunds</span>
+                    <i class="fas fa-angle-down ml-auto"></i>
+                </a>
+                <ul class="nav-dropdown">
+                    <li class="nav-item">
+                        <a class="nav-link" asp-area="" asp-controller="Refund" asp-action="ManageRefunds">
+                            <span>Manage Refunds</span>
+                        </a>
+                    </li>
+                </ul>
+            </li>
         </ul>
 
         <hr class="sidebar-divider">
