--- a/Task1LoginRegister/Views/Refund/ProcessRefund.cshtml
+++ b/Task1LoginRegister/Views/Refund/ProcessRefund.cshtml
@@ -6,7 +6,8 @@
 }
 
 <div class="container-fluid">
-    <h4 class="mb-4">Process Refund</h4>
+    <h3 class="mb-4 text-info text-center">Process Refund</h3>
+    <hr />
     @if (TempData["ErrorMessage"] != null)
     {
         <div class="alert alert-danger alert-dismissible fade show" role="alert">
