--- a/Task1LoginRegister/Views/Shared/_UserLayout.cshtml
+++ b/Task1LoginRegister/Views/Shared/_UserLayout.cshtml
@@ -70,7 +70,7 @@
                                     <ul class="dropdown-menu">
                                         <li><a class="dropdown-item" asp-controller="Account" asp-action="MyProfile">My Profile</a></li>
                                         <li><a class="dropdown-item" asp-action="UserOrders" asp-controller="Account">Orders</a></li>
-                                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                        <li><a class="dropdown-item" asp-action="MyRefund" asp-controller="Profile">My Refunds</a></li>
                                         <li><hr class="dropdown-divider"></li>
                                         <li><a class="dropdown-item" href="#">Separated link</a></li>
                                     </ul>
