--- a/Task1LoginRegister/Views/Cart/Index.cshtml
+++ b/Task1LoginRegister/Views/Cart/Index.cshtml
@@ -177,7 +177,7 @@
                                     <h6 class="d-flex gap-3 align-items-center flex-wrap">
                                         <span class="text-black fw-bold">@item.Product.CalculatedSellingPrice.ToString("C")</span>
                                         <span class="text-muted text-decoration-line-through">@item.Product.Price.ToString("C")</span>
-                                        <span class="fw-bold btn btn-success btn-sm">
+                                        <span class="fw-bold btn btn-warning btn-sm">
                                             @item.Product.SellingPricePercent.ToString("0")% off
                                         </span>
                                     </h6>
