--- a/Task1LoginRegister/Areas/Admin/Views/GstTaxes/Delete.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/GstTaxes/Delete.cshtml
@@ -5,54 +5,42 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Delete</h1>
+<div class="container mt-4">
+    <div class="card shadow-lg">
+        <div class="card-header bg-danger text-white">
+            <h3 class="mb-0">Delete GST Tax</h3>
+        </div>
+        <div class="card-body">
+            <h5 class="text-danger">Are you sure you want to delete this?</h5>
+            <hr />
+            <dl class="row">
+                <dt class="col-sm-4">Category</dt>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.Subcategory.Category.Name)</dd>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>GstTax</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Subcategory.Category)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Subcategory.Category.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Subcategory)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Subcategory.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CGST)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CGST) %
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SGST) 
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.SGST) %
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreatedAt)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedAt)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UpdatedAt)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UpdatedAt)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="GSTId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+                <dt class="col-sm-4">Subcategory</dt>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.Subcategory.Name)</dd>
+
+                <dt class="col-sm-4">CGST (%)</dt>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.CGST) %</dd>
+
+                <dt class="col-sm-4">SGST (%)</dt>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.SGST) %</dd>
+
+                <dt class="col-sm-4">Created At</dt>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.CreatedAt)</dd>
+
+                <dt class="col-sm-4">Updated At</dt>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.UpdatedAt)</dd>
+            </dl>
+
+            <!-- Delete Form -->
+            <form asp-action="Delete" method="post">
+                <input type="hidden" asp-for="GSTId" />
+                <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                    <button type="submit" class="btn btn-danger">Delete</button>
+                    <a asp-action="Index" class="btn btn-outline-secondary">Back to List</a>
+                </div>
+            </form>
+        </div>
+    </div>
 </div>
