--- a/Task1LoginRegister/Areas/Admin/Views/GstTaxes/Details.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/GstTaxes/Details.cshtml
@@ -5,51 +5,39 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Details</h1>
+<div class="container mt-4">
+    <div class="card shadow-lg">
+        <div class="card-header bg-info text-white">
+            <h3 class="mb-0">GST Tax Details</h3>
+        </div>
+        <div class="card-body">
+            <dl class="row">
+                <dt class="col-sm-4">Category</dt>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.Subcategory.Category.Name)</dd>
 
-<div>
-    <h4>GstTax</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Subcategory.Category)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Subcategory.Category.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Subcategory)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Subcategory.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CGST)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CGST) %
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SGST)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.SGST) %
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreatedAt)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedAt)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UpdatedAt)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UpdatedAt)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.GSTId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+                <dt class="col-sm-4">Subcategory</dt>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.Subcategory.Name)</dd>
+
+                <dt class="col-sm-4">CGST (%)</dt>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.CGST) %</dd>
+
+                <dt class="col-sm-4">SGST (%)</dt>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.SGST) %</dd>
+
+                <dt class="col-sm-4">Created At</dt>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.CreatedAt)</dd>
+
+                <dt class="col-sm-4">Updated At</dt>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.UpdatedAt)</dd>
+            </dl>
+        </div>
+        <div class="card-footer d-flex justify-content-between">
+            <a asp-action="Edit" asp-route-id="@Model?.GSTId" class="btn btn-warning btn-sm">
+                <i class="fas fa-edit"></i> Edit
+            </a>
+            <a asp-action="Index" class="btn btn-outline-secondary btn-sm">
+                <i class="fas fa-list"></i> Back to List
+            </a>
+        </div>
+    </div>
 </div>
