--- a/Task1LoginRegister/Views/Home/Details.cshtml
+++ b/Task1LoginRegister/Views/Home/Details.cshtml
@@ -30,7 +30,7 @@
         max-width: 100%;
         width: 100%;
         height: 450px;
-        object-fit: contain;
+        object-fit: cover;
         border: 2px solid #ddd;
         padding: 5px;
         border-radius: 10px;
