--- a/Task1LoginRegister/Views/Refund/ManageRefunds.cshtml
+++ b/Task1LoginRegister/Views/Refund/ManageRefunds.cshtml
@@ -25,7 +25,7 @@
     <div class="card-body">
         <div class="table-responsive">
             <table class="table table-hover" id="refundTable">
-                <thead>
+                <thead class="bg-info text-white">
                     <tr>
                         <th>Refund Code</th>
                         <th>Order Id</th>
