#Added report download as a pdf of sales data

--- a/Task1LoginRegister/Areas/Admin/Views/Report/Index.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/Report/Index.cshtml
@@ -119,7 +119,7 @@
                 </div>
                 <div class="card-body">
                     <p>Understand customer behavior, identify loyal customers, and track spending patterns.</p>
-                    <a asp-action="CustomerInsights" asp-area="Admin" asp-asp-controller="Report" class="btn btn-outline-info">
+                    <a asp-action="CustomerReport" asp-area="Admin" asp-asp-controller="Report" class="btn btn-outline-info">
                         <i class="fas fa-users  me-1"></i> View Customer Reports
                     </a>
                 </div>
