--- a/Task1LoginRegister/Areas/Admin/Views/Shared/_OrderTablesData.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/Shared/_OrderTablesData.cshtml
@@ -12,7 +12,7 @@
                         <th>Order #</th>
                         <th>Customer</th>
                         <th>Date</th>
-                        <th>Amount</th>
+                        <th>Amount (₹)</th>
                         <th>Payment Method</th>
                         <th>Payment Status</th>
                         <th>Order Status</th>
